examples/test/testpolicy5648.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5648
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key0: value44
      key47: value18
      key5: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value5
          key25: value7
      podSelector:
        matchLabels:
          key17: value14
          key32: value22
